# nepflow/src/main/java/com/nepflow/NepenthesManagement/Model/MultiHybrid.java
@@ -1,0 +1,7 @@
+package com.nepflow.NepenthesManagement.Model;
+
+import org.springframework.data.neo4j.core.schema.Node;
+
+@Node
+public class MultiHybrid {
+}
